aks-staging/athena/path-route-alternative.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-route
  namespace: athena
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  hostnames:
  - "athena.phamid.io"
  rules:
  - backendRefs:
    - name: athena-sensei-frontend
      port: 80
