aks-staging/athena/path-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-route
  namespace: athena
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  # hostnames:
  # - "phx4-dpms-app-aks.csdental.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /athena
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /        
    backendRefs:
    - name: athena-sensei-frontend
      port: 80
